--- a/css/style.css
+++ b/css/style.css
@@ -75,16 +75,15 @@ html, body {
 #content {
 	padding-top: 15px;
 }
-
-/* Home Page */
-#intro, #skill, #exp {
+#intro, #skill, #exp, #project {
 	width: 100%;
 	padding: 0 70px 60px 70px;
 }
-	#intro i, #skill i, #exp i {
+	#intro i, #skill i, #exp i, #project i {
 		margin-right: 7px;
 	}
 
+/* Home Page */
 #skill, footer {
 	padding-top: 40px;
 	background-image: linear-gradient( #595959, #777777 );
@@ -107,8 +106,22 @@ html, body {
 		#exp .panel-body h3 small { margin-left: 10px; }
 	#exp .panel-footer { padding: 30px 20px; }
 
+/* Project Page */
+#project {}
+	#project .project-entry {
+		margin: 30px 0;
+		text-align: center;
+	}
+		#project .project-entry .thumbnail {
+			padding-top: 20px;
+		}
+		#project .project-entry img {
+			width: 200px;
+			height: 200px;
+		}
+
 /* Blog Page */
-#blog, #project {
+#blog {
 	width: 100%;
 	text-align: center;
 }
